[tool.poetry]
name = "nonebot-plugin-xingzuo"
version = "1.0.0"
description = ""
authors = ["mengxinyuan <1648576390@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_xingzuo"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
